Kubernetes-Clusters/src/scripts/nodes/controlPlane/kubernetes/kub_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo-app
  labels:
    app: foo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
        - name: foo-app
          image: iuresf/apprunner  # Same image
          resources:
            requests:
              cpu: "1000m"  # Request 100 millicores of CPU
            limits:
              cpu: "1000m"  # Limit to 200 millicores of CPU
---
kind: Service
apiVersion: v1
metadata:
  name: foo-service
spec:
  selector:
    app: foo
  ports:
    - port: 9898
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-app
  labels:
    app: bar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bar
  template:
    metadata:
      labels:
        app: bar
    spec:
      containers:
        - name: bar-app
          image: iuresf/apprunner  # Same image
          resources:
            requests:
              cpu: "1000m"  # Request 1000 millicores of CPU
            limits:
              cpu: "1000m"  # Limit to 1000 millicores of CPU
---
kind: Service
apiVersion: v1
metadata:
  name: bar-service
spec:
  selector:
    app: bar
  ports:
    - port: 9898
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
  labels:
    app: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
        - name: test-app
          image: iuresf/apprunner
          resources:
            requests:
              cpu: "300m"
            limits:
              cpu: "1000m"
---
kind: Service
apiVersion: v1
metadata:
  name: test-service
spec:
  selector:
    app: test
  ports:
    - port: 9898
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  namespace: default # É uma boa prática definir o namespace explicitamente
  annotations:
  # A anotação de reescrita foi removida, pois a aplicação agora lida
  # com o caminho completo (ex: /foo, /bar, /test).
  # O Ingress Controller encaminha o caminho tal como ele é recebido.
spec:
  ingressClassName: nginx # Certifique-se de que corresponde ao seu IngressClass
  rules:
    - host: "*.amazonaws.com" # Corrigido para um curinga DNS-1123 válido
      http:
        paths:
          - pathType: Prefix
            path: /foo
            backend:
              service:
                name: foo-service
                port:
                  number: 9898
          - pathType: Prefix
            path: /bar
            backend:
              service:
                name: bar-service
                port:
                  number: 9898
          - pathType: Prefix
            path: /test
            backend:
              service:
                name: test-service
                port:
                  number: 9898
